--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,11 +27,10 @@ main {
 
 h1, h4 {
   font-weight: normal;
-
 }
 
 h1 {
-  margin: 0 0 45px;
+  margin: 0 0 35px;
   font-size: 3em;
 }
 
@@ -52,10 +51,16 @@ a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 400px) {
+  body {
+    margin:0;
+  }
+}
+
+@media (min-width: 500px) and (min-height: 500px) {
   h1 {
     font-size: 4em;
   }
@@ -64,7 +69,7 @@ a:hover {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 800px) and (min-height: 500px) {
   h1 {
     font-size: 6em;
   }
