--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,10 @@
+:root {
+  --red:    tomato;
+  --blue:   dodgerblue;
+  --green:  greenyellow;
+  --yellow: khaki;
+}
+
 @font-face {
   font-family: "AlteHaasGrotesk";
   src: url("/assets/fonts/AlteHaasGroteskRegular.otf") format("opentype");
@@ -22,6 +29,10 @@ main {
   height: auto;
 }
 
+h1, h4, a, a:visited {
+  color: #D0D0D0;
+}
+
 h1, h4 {
   font-weight: normal;
 }
@@ -31,17 +42,57 @@ h1 {
   font-size: 3em;
 }
 
+#intro a {
+  text-decoration: none;
+}
+
 h4 {
   margin: 0 0 .3em;
   font-size: 1.5em;
 }
 
-h1, h4, a, a:visited, a:active, a:focus {
-  color: #D0D0D0;
+h4:last-of-type {
+  margin-top: 3px;
 }
 
-a:hover {
-  color: #6993FF;
+#product:hover h4{
+  color: var(--red);
+}
+
+#graphic:hover h4{
+  color: var(--blue);
+}
+
+h4#amp, #front-end h4 {
+  display: inline;
+}
+
+#front-end:hover h4{
+  color: var(--green);
+}
+
+.dot {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 4px 4px 4px 0;
+}
+
+.red {
+  background: var(--red);
+}
+
+.blue {
+  background: var(--blue);
+}
+
+.green {
+  background: var(--green);
+}
+
+#links a:hover {
+  color: var(--yellow);
 }
 
 #links {
@@ -64,6 +115,11 @@ a:hover {
   h4 {
     font-size: 2em;
   }
+  .dot {
+    height: 15px;
+    width: 15px;
+    margin: 5px 5px 5px 0;
+  }
 }
 
 @media (min-width: 800px) and (min-height: 500px) {
@@ -78,5 +134,10 @@ a:hover {
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+  .dot {
+    height: 20px;
+    width: 20px;
+    margin: 8px 8px 8px 0;
   }
 }
