--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,11 +4,16 @@
   --green:  palegreen;
   --yellow: khaki;
   --grey:   #D0D0D0;
+  --bg:     #181818;
 }
 
 @font-face {
   font-family: "AlteHaasGrotesk";
   src: url("/assets/fonts/AlteHaasGroteskRegular.otf") format("opentype");
+}
+
+html {
+  overflow-x: hidden;
 }
 
 html, body {
@@ -17,7 +22,7 @@ html, body {
 
 body {
   font-family: "AlteHaasGrotesk", Helvetica, sans-serif;
-  background: #181818;
+  background: var(--bg);
   font-weight: normal;
   margin: 15px;
   padding: 0;
@@ -169,9 +174,27 @@ article {
 }
 
 .date {
-  color: #D0D0D0;
-  filter: brightness(50%);
+  color: #777;
   justify-self: end;
+  position: relative;
+}
+
+.update {
+  background: var(--yellow);
+  color: var(--bg);
+  border-radius: 50px;
+  padding: 2px;
+  font-size: .95rem;
+  position: absolute;
+  bottom: 22px;
+  left: 25px;
+  transform: rotate(10deg);
+}
+
+@media (min-width: 800px) {
+  .update {
+    left: 65px;
+  }
 }
 
 .disciplines {
