--- a/assets/css/global/typography.css
+++ b/assets/css/global/typography.css
@@ -12,8 +12,8 @@
 
 h1 {
   font-family: "AlteHaasGrotesk", Helvetica, sans-serif;
-  font-size: 20px;
-  line-height: 22px;
+  font-size: 16px;
+  line-height: 20px;
   color: var(--grey);
   font-weight: normal;
   margin: -5px 0 0 0;
@@ -24,11 +24,31 @@ a {
   text-decoration: none;
 }
 
+@media (min-width: 550px) {
+  h1 {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
+
+@media (min-width: 800px) {
+  h1 {
+    font-size: 30px;
+    line-height: 37px;
+  }
+}
+
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
+
 @media (min-width: 1500px) {
   h1 {
     font-size: 26px;
     line-height: 30px;
-    letter-spacing: -0.1px;
   }
 }
 
