--- a/assets/css/global/typography.css
+++ b/assets/css/global/typography.css
@@ -15,7 +15,7 @@
   src: url("/assets/fonts/iosevka-regular.ttf") format("truetype");
 }
 
-h1,
+h1, h2,
 button {
   font-family: "AlteHaasGrotesk", Helvetica, sans-serif;
   font-size: 16px;
@@ -26,12 +26,7 @@ button {
 }
 
 h2 {
-  /* font-family: "Iosevka", monospace; */
-  font-family: "AlteHaasGrotesk", Helvetica, sans-serif;
-  font-size: 16px;
   color: var(--dark-grey);
-  font-weight: normal;
-  margin: 5px 0 0 0;
 }
 
 a {
