--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,21 @@
 
 @import 'components/header.css';
 @import 'components/footer.css';
+
+
+/* lazy load */
+img.lazy {
+  opacity: 0;
+}
+img:not(.initial) {
+  transition: opacity 1s;
+}
+img.initial,
+img.loaded,
+img.error {
+  opacity: 1;
+}
+
+img:not([src]) {
+  visibility: hidden;
+}
